Fix #6 update respectfully to default dark mode

--- a/_sass/_byline.scss
+++ b/_sass/_byline.scss
@@ -21,16 +21,10 @@
     &::before {
       content: "";
       border-radius: 50%;
-      box-shadow:
-        inset 0 0 0 1px rgba(0, 0, 0, 0.35),
-        inset 0 0 0 2px rgba(255, 255, 255, 0.1),
-        inset 0 2px 0 0 rgba(255, 255, 255, 0.45),
-        inset 0 -2px 0 0 rgba(255, 255, 255, 0.15),
-        0 1px 3px 0 rgba(0, 0, 0, 0.12),
-        0 1px 2px 0 rgba(0, 0, 0, 0.24);
       height: 100%;
       position: absolute;
       width: 100%;
+      @include light-avatar-shadow;
 
       @media (prefers-color-scheme: dark) {
         @include dark-avatar-shadow;
