--- a/_sass/_featured.scss
+++ b/_sass/_featured.scss
@@ -60,18 +60,11 @@
   }
 
   .featured-image {
-    background-color: var(--silver-100);
+    @include light-image;
     background-origin: border-box;
     background-position: 50%;
     background-size: cover;
-    border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 0.25rem;
-    box-shadow:
-      inset 0 0 0 1px rgba(255, 255, 255, 0.05),
-      inset 0 1px 0 0 rgba(255, 255, 255, 0.2),
-      inset 0 -1px 0 0 rgba(255, 255, 255, 0.1),
-      0 1px 3px rgba(0, 0, 0, 0.05),
-      0 1px 2px rgba(0, 0, 0, 0.1);
     display: inline-block;
     height: 320px;
     margin-bottom: 1rem;
