--- a/_sass/_figures.scss
+++ b/_sass/_figures.scss
@@ -126,10 +126,10 @@ figure {
 
   &.card {
     img {
-      background-color: var(--silver-100);
       box-shadow:
         0 0 0 1px rgba(0, 0, 0, 0.05),
         0 3px 3px rgba(0, 0, 0, 0.22);
+      @include light-figure;
 
       @media (prefers-color-scheme: dark) {
         @include dark-figure;
