--- a/_sass/_nightmode.scss
+++ b/_sass/_nightmode.scss
@@ -1,10 +1,13 @@
 :root {
-  .night-mode {
+  .dark-mode {
     @include dark-root;
+  }
+  .light-mode {
+    @include light-root;
   }
 }
 
-.night-mode {
+.dark-mode {
   .byline {
     .avatar {
       &::before {
@@ -24,6 +27,31 @@
     &.card {
       img {
         @include dark-figure;
+      }
+    }
+  }
+}
+
+.light-mode {
+  .byline {
+    .avatar {
+      &::before {
+        @include light-avatar-shadow;
+      }
+    }
+  }
+  .featured {
+    .featured-image {
+      @include light-image;
+    }
+  }
+  .highlight {
+    @include light-highlight;
+  }
+  figure {
+    &.card {
+      img {
+        @include light-figure;
       }
     }
   }
